--- a/overlay.html
+++ b/overlay.html
@@ -219,8 +219,8 @@
             const w = mosaicCanvas.width / devicePixelRatioCached;
             const h = mosaicCanvas.height / devicePixelRatioCached;
             ctx.clearRect(0, 0, w, h);
-            // 坐标换算采用“物理像素 -> CSS逻辑像素”：优先使用当前窗口的 devicePixelRatio
-            const coordScale = (typeof scaleFactor === 'number' && Math.abs(scaleFactor - devicePixelRatioCached) < 0.01)
+            // 坐标换算采用“物理像素 -> CSS逻辑像素”：优先使用服务端传入的 scale_factor（对应工作显示器 DPI）
+            const coordScale = (typeof scaleFactor === 'number' && isFinite(scaleFactor) && scaleFactor > 0)
                 ? scaleFactor
                 : devicePixelRatioCached;
 
